SERVER-89395 Balancer always fail to move untracked unsplittable collections (#21122)

GitOrigin-RevId: ded7be20dd935febf4172f4e38868c4967b5bd6a