jstests/core/query/expr/expr_index_use.js
@@ -2,6 +2,8 @@
 // @tags: [
 //   assumes_read_concern_local,
 //   requires_fcv_63,
+//   # TODO SERVER-32311: re-enable test in balancer suites when the relative issue is solved.
+//   assumes_balancer_off,
 // ]
 
 import {getAggPlanStage, getPlanStage, hasRejectedPlans} from "jstests/libs/analyze_plan.js";
