jstests/core/query/query_settings/query_settings_size_limits.js
@@ -6,6 +6,8 @@
  *   requires_non_retryable_commands,
  *   simulate_atlas_proxy_incompatible,
  *   requires_fcv_80,
+ *   # TODO SERVER-89461 Investigate why test using huge batch size timeout in suites with balancer.
+ *   assumes_balancer_off,
  * ]
  */
 import {assertDropAndRecreateCollection} from "jstests/libs/collection_drop_recreate.js";
