jstests/core/write/delete/batch_write_command_delete.js
@@ -2,6 +2,8 @@
 //   assumes_write_concern_unchanged,
 //   requires_non_retryable_writes,
 //   requires_fastcount,
+//   # TODO SERVER-89461 Investigate why test using huge batch size timeout in suites with balancer
+//   assumes_balancer_off,
 // ]
 
 //
